# reprobuild

./: .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  Justfile  KWIN-RECIPE-GAP.md  README.md  _m9r14d_2_bulk_url_fix.py  _m9r14d_6_strip_d_prefix.py  _m9r14d_6b_strip_buildtype.py  _m9r31_de_ldd_survey.sh  _m9r31_iso_build.sh  _m9r31_propagate_v3.sh  _m9r31_qemu_de_smoke.sh  _m9r32_iso_build.sh  _m9r32_pw_build.sh  _m9r32_qemu_de_smoke.sh  _m9r33_fresh_pw_build.sh  _m9r33_iso_build.sh  _m9r33_qemu_de_smoke.sh  _m9r36_install_boot_smoke.sh  _m9r36_iso_rebuild.sh  _m9r36_pw_verify.sh  _m9r37_boot_installed.sh  _m9r37_install_diag.sh  _m9r37_iso_rebuild.sh  _m9r38_install.sh  _m9r38_rebuild_installer.sh  _m9r38_verify_installer_grub_fix.sh  _m9r39_install.sh  _m9r39_iso_rebuild.sh  _m9r40_boot_installed.sh  _m9r41_boot_installed.sh  _m9r41_install.sh  _m9r41_iso_rebuild.sh  _m9r42_install.sh  _m9r42_iso_rebuild.sh  _m9r42_loopback_smoke.sh  _m9r42_smoke_disko.json  _m9r43_boot_installed.sh  (+19 more)
.github/: sibling-repos
apps/: entrypoints.txt
apps/reproos-installer/: BUILD_EVIDENCE.txt  CMakeLists.txt  repro.nim
apps/reproos-installer/data/: activities.toml  smoke-test-config.toml
apps/reproos-installer/qml/: main.qml  qml.qrc
apps/reproos-installer/qml/screens/: Activities.qml  DeSelect.qml  Disk.qml  Finished.qml  Install.qml  Keyboard.qml  Locale.qml  Summary.qml  Users.qml  Welcome.qml
apps/reproos-installer/src/: installer_state.cpp  installer_state.h  main.cpp
benchmarks/: README.md
benchmarks/fixtures/cmake-generated-custom-command/: CMakeLists.txt  generate.cmake  main.c  seed.txt
docs/: PACKAGING.md  README.md  Trace-Based-Incremental-Testing.milestones.org  bootstrap-build-graph.md  build-introspection.md  capabilities.md  database.md  dependency-collection.md  foreign-package-runtime.md  m70-dotfiles-migration.md  multi-de-login-selection.md  multi-os-macos-runtime.md  multi-os-windows-runtime.md  nix-provisioning.md  progress.md  repository-requirements.md  reproos-config-dsl.md  reproos-mvp.md  runquota-policy.md  stats.md  wayland-de-gnome.md  wayland-de-hyprland.md  wayland-de-kde.md  windows-system-resources-status.md
examples/: README.md  use-setup-reprobuild.yml
libs/: README.md  ct_test_interface  ct_test_nim_unittest  ct_test_unittest_parallel  libraries.txt  third_party_sources.txt
nix/: README.md
recipes/: reproos-mvp-config-multi.nim  reproos-mvp-config.nim
references/: README.md
scripts/: aggregate-stats.py  build_apps.sh  bump_version.sh  check_nim_sources.sh  check_repo_requirements.sh  cmake_generator_competitiveness_bench.py  collect-benchmark-metrics.sh  dev-shell.sh  diagnose-rust-crude-without-monitor-bypass.ps1  generate_test_edges.nim  package-release.ps1  package-release.sh  profile-configure-aggregate.ps1  profile-configure-cold-warm.ps1  profile-trycompile-configure.ps1  run-a2-gate.ps1  run-cmake-generator-competitiveness-benchmark.sh  run-m23-benchmark.sh  run-m24-acceptance.sh  run_multi_distro_tests.sh  run_tests.sh  run_tests_windows.ps1  summarize-bench.py  validate-canonical-trycompile-source.ps1  validate-crystal-hello-binary.sh  validate-direct-provider-multiconfig.ps1  validate-direct-provider.ps1  validate-engine-preserves-provider-stderr.ps1  validate-engine-standard-dispatch.ps1  validate-engine-standard-fallback.ps1  validate-from-source-autotools-expat.ps1  validate-from-source-cmake-kcoreaddons.ps1  validate-from-source-make-libcap.ps1  validate-from-source-meson-dbus-broker.ps1  validate-haskell-cabal-hello-binary.sh  validate-interface-codec-back-compat.ps1  validate-standard-provider-ada-mode3-binary-with-library.ps1  validate-standard-provider-c-cpp-autotools-hello.ps1  (+75 more)
(+2357 files in other folders)
